css styling done2

--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <title>Document</title>
+    <title>Roman Num Convert</title>
 </head>
 
 <body>
-
-    <input id="number" type="number" value="">
-    <button id="convert-btn">Check</button>
-    <div id="output" value=""></div>
+    <div class="container">
+        <h1>ROMAN NUMERAL CONVERTER</h1>
+        <div id="main-part">
+            <p>Enter a Number in Decimal</p>
+            <input id="number" type="number" value="">
+            <button id="convert-btn">Check</button>
+        </div>
+        <div id="output" value=""></div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
