--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input id="number" type="number" value="">
             <button id="convert-btn">Check</button>
         </div>
-        <div id="output" value=""></div>
+        <div id="output" value="">RESULT</div>
     </div>
 
     <script src="./script.js"></script>
